Broadcast command fully working, switched back to java 8