@@ -1,5 +1,6 @@
 package com.kingrealzyt.cbot.commands;
 
+import java.util.Arrays;
 import java.util.List;
 
 public interface ICommand {
@@ -9,7 +10,7 @@ public interface ICommand {
     String getName();
 
     default List<String> getAliases() {
-        return List.of();
+        return Arrays.asList();
     }
 
 }
